# corosio_protocol_bench

./: CMakeLists.txt  README.md  buffered_socket_sink.hpp  buffered_socket_source.hpp  immediate_socket_sink.hpp  immediate_socket_source.hpp  main.cpp  proto_read.hpp  proto_write.hpp  simple_socket_sink.hpp  simple_socket_source.hpp  task_type.hpp  writer_task.hpp
